CMAKE_MINIMUM_REQUIRED (VERSION 2.8.7)
PROJECT (lpeg)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_LIST)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/tools/lua_include
)

ADD_DEFINITIONS (-DLPEG_DEBUG)

ADD_LIBRARY (lpeg ${SRC_LIST} )

IF (WIN32)
    SET_TARGET_PROPERTIES(lpeg PROPERTIES COMPILE_FLAGS "/TP /MP" ${BUILD_FLAGS})
ENDIF ()
